libcm4all-was (0.8) unstable; urgency=low

  * apreq: use libapreq2 forward-declarations
  * xios: reduce libcore header dependencies
  * xios: check for control commands before reading
  * simple: fix memory leak
  * simple: rename _input_read() to _read()
  * simple: add _output_poll()
  * simple: make file descriptors non-blocking
  * simple: check for control commands when I/O blocks
  * convert to shared library

 --   

libcm4all-was (0.7) unstable; urgency=low

  * debian/control: improved clang build-dependency
  * simple: add header and parameter iterator

 -- Max Kellermann <mk@cm4all.com>  Mon, 27 Apr 2015 11:18:07 -0000

libcm4all-was (0.6) unstable; urgency=low

  * debian: build with libcm4all-apreq2

 -- Max Kellermann <mk@cm4all.com>  Mon, 19 Jan 2015 17:38:05 -0000

libcm4all-was (0.5) unstable; urgency=low

  * apreq: add option UPLOAD_BUFFER_SIZE
  * headers are now C++ compatible

 -- Max Kellermann <mk@cm4all.com>  Mon, 19 Jan 2015 11:53:59 -0000

libcm4all-was (0.4) unstable; urgency=low

  * apreq: compile and link with libapr and libapr-util
  * build with libapreq 2.13

 -- Max Kellermann <mk@cm4all.com>  Mon, 10 Mar 2014 16:15:45 -0000

libcm4all-was (0.3) unstable; urgency=low

  * simple: reuse connection after discarding request body
  * simple: handle WAS_COMMAND_PREMATURE
  * simple: implement was_simple_input_close()
  * protocol: documentation

 -- Max Kellermann <mk@cm4all.com>  Sat, 07 Dec 2013 07:55:57 -0000

libcm4all-was (0.2) unstable; urgency=low

  * simple: flush the control buffer in _end()
  * simple: auto-dispose the unused request body
  * support WebDAV

 -- Max Kellermann <mk@cm4all.com>  Wed, 13 Nov 2013 17:15:27 -0000

libcm4all-was (0.1) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Wed, 09 Feb 2011 15:18:03 +0100