@@ -5,6 +5,7 @@ libcm4all-was (0.8) unstable; urgency=low
   * xios: check for control commands before reading
   * simple: fix memory leak
   * simple: rename _input_read() to _read()
+  * simple: _read() returns -1 on I/O error, -2 on other error
   * simple: add _output_poll()
   * simple: make file descriptors non-blocking
   * simple: check for control commands when I/O blocks
